--- a/demo1.html
+++ b/demo1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 	<head>
@@ -21,7 +21,7 @@
 			<div class="i_ul">
 				<ul>
 					<li>
-						<a href="index.html">首页</a>
+						<a href="index.html">首页s</a>
 					</li>
 					<li class="staOne" id="t1">
 						<a href="javascript:;">关于心宝</a>
