--- a/heart02 - 副本.html
+++ b/heart02 - 副本.html
@@ -7,6 +7,7 @@
 		<title>心宝药业</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		<link rel="stylesheet" type="text/css" href="css/dome1.css"/>
+		<link rel="stylesheet" type="text/css" href="css/css.css"/>
 		<script type="text/javascript">
 			(function() {
 				var html = document.documentElement;
@@ -24,7 +25,7 @@
 						<a href="index.html">首页</a>
 					</li>
 					<li class="staOne" id="t1">
-						<a href="javascript:;">关于心宝</a>
+						<div class="width float"><a href="javascript:;">关于心宝</a></div>
 						<ul class="i_uls">
 							<li>
 								<a href="company_profile.html">公司简介</a>
@@ -39,13 +40,12 @@
 								<a href="honor.html">企业荣誉</a>
 							</li>
 							<li>
-								<a href="speech.html" >董事长致词</a>
+								<a href="speech.html">董事长致词</a>
 							</li>
 						</ul>
 					</li>
 					<li class="staOne" id="t2">
 						<div class="float width"><a href="javascript:;">产品中心</a></div>
-						<!--<div class="float width" style="background: #B60005;"><a href="javascript:;">产品中心</a></div>-->
 						<ul class="i_uls">
 							<li>
 								<a href="product_01.html">心宝丸</a>
@@ -62,7 +62,7 @@
 						</ul>
 					</li>
 					<li class="staOne" id="t3">
-						<a href="javascript:;">心肾同治</a>
+						<a href="#">心肾同治</a>
 						<ul class="i_uls">
 							<li>
 								<a href="heart.html">心肾相交理论</a>
@@ -76,7 +76,7 @@
 						</ul>
 					</li>
 					<li class="staOne" id="t4">
-						<div class="float width" style="background: #B60005;"><a href="javascript:;">最新动态</a></div>
+						<a href="javascript:;">最新动态</a>
 						<ul class="i_uls">
 							<li>
 								<a href="company_new.html">公司动态</a>
@@ -99,24 +99,82 @@
 			</div>
 			<header>
 				<div class="header_logo"></div>
-				<h1 class="header_con">最新动态</h1>
+				<h1 class="header_con">心肾同治</h1>
 				<div class="header_nav"></div>
 			</header>
 			<div class="banner float width">
 				<div class="banner_nav">
 					<ul>
-						<li><a href="company_new.html">公司动态</a></li>
-						<li><a href="industry_new.html">行业动态</a></li>
-						<li><a href="video.html">视频中心</a></li>
+						<li><a href="heart.html">心肾相交理论</a></li>
+						<li><a href="heart01.html">心宝丸的临床应用</a></li>
+						<li><a href="heart02.html">龟鹿补肾片健康手册</a></li>
 					</ul>
 				</div>
 				<div class="banners">
-					<img src="img/b8625fe007.jpg" class="img"/>
+					<img src="img/8513610779.jpg" class="img"/>
 				</div>
 			</div>
 			<section class="left width">
-				<div class="stc_title"><img src="img/title.png" alt=""  class="img"/></div>
-				
+				<div class="stc_title"><img src="img/title_heart_02.png" alt=""  class="img"/></div>
+				<div class="_con sectionh">
+					<ul class="new_boxs float">
+						<div class="logol"><img src="img/logos.png" class="img"/></div>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>	
+					</ul>
+				</div>
 			</section>
 			<div class="blogroll">
 				<div class="blogroll_left">友情链接</div>
@@ -137,7 +195,10 @@
 	<script type="text/javascript">
 		$(function() {
 			$('.staOne').children('ul').slideUp();
-			$('#t4').children('ul').slideDown();
+			$('#t3').children('ul').slideDown();
+			$('#t3 div').addClass('bgcolor');
+			$('.banner_nav').find('li').children('a').eq(2).addClass('bor_bn')
+			$('#t3').find('li').eq(2).children('a').addClass('color');
 			$('.header_nav').click(function() {
 				$('.i_ul').toggle(500);
 			})
