--- a/Culture.html
+++ b/Culture.html
@@ -114,7 +114,7 @@
 				</div>
 				<div class="banners"></div>
 			</div>
-			<section class="left width b1">
+			<section class="float width b1">
 				<div class="stc_title"><img src="img/title_about_03.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<div class="cul_top">
