--- a/company_profile.html
+++ b/company_profile.html
@@ -113,7 +113,7 @@
 				</div>
 				<div class="banners"></div>
 			</div>
-			<section class="left width b1">
+			<section class="float width b1">
 				<div class="stc_title"><img src="img/title_about_01.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<span class="company_top float width"><img src="img/e705c14d15.jpg" class="img"/></span>
