--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 					<img src="img/731b7eec3f.jpg" class="img" />
 				</div>
 			</div>
-			<section class="left width float">
+			<section class="float width float">
 				<div class="stc_title float width"><img src="img/title_contant.png" alt="" class="img" /></div>
 				<div class="contant_form">
 					<div class="form_bg">
