--- a/honor.html
+++ b/honor.html
@@ -113,7 +113,7 @@
 				</div>
 				<div class="banners"></div>
 			</div>
-			<section class="left width b1">
+			<section class="float width b1">
 				<div class="stc_title"><img src="img/title_about_04.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<img src="img/d1605362c1.png" alt="心宝荣誉墙" class="img" />
