--- a/porder_detail.html
+++ b/porder_detail.html
@@ -106,8 +106,8 @@
 					<ul>
 						<li><a href="product_01.html">心宝丸</a></li>
 						<li><a href="product_02.html">龟鹿补肾片</a></li>
-						<li><a href="product_03.html">蒲地蓝消炎胶囊</a></li>
-						<li><a href="product_04.html">蒲地蓝消炎片</a></li>
+						<li><a href="product_03.html">蒲地蓝消炎片</a></li>
+						<li><a href="product_04.html">蒲地蓝消炎胶囊</a></li>
 					</ul>
 				</div>
 				<div class="banner_box">
@@ -132,7 +132,7 @@
 					</div>
 				</div>
 			</div>
-			<section class="left width">
+			<section class="float width">
 				<div class="stc_title"><img src="img/sms.png" alt=""  class="img"/></div>
 				<div class="_con">
 					
