--- a/product_04.html
+++ b/product_04.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width,user-scalable=no" />
 		<title>心宝药业</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
-		<link rel="stylesheet" type="text/css" href="css/dome1.css"/>
+		<link rel="stylesheet" type="text/css" href="css/dome1.css" />
+		<!--<link rel="stylesheet" type="text/css" href="css/css.css" />-->
 		<script type="text/javascript">
 			(function() {
 				var html = document.documentElement;
@@ -24,7 +25,9 @@
 						<a href="index.html">首页</a>
 					</li>
 					<li class="staOne" id="t1">
-						<a href="javascript:;">关于心宝</a>
+						<div class="width float">
+							<a href="javascript:;">关于心宝</a>
+						</div>
 						<ul class="i_uls">
 							<li>
 								<a href="company_profile.html">公司简介</a>
@@ -39,13 +42,14 @@
 								<a href="honor.html">企业荣誉</a>
 							</li>
 							<li>
-								<a href="speech.html" >董事长致词</a>
+								<a href="speech.html">董事长致词</a>
 							</li>
 						</ul>
 					</li>
 					<li class="staOne" id="t2">
-						<!--<div class="float width"><a href="javascript:;">产品中心</a></div>-->
-						<div class="float width"><a href="javascript:;">产品中心</a></div>
+						<div class="float width">
+							<a href="javascript:;">产品中心</a>
+						</div>
 						<ul class="i_uls">
 							<li>
 								<a href="product_01.html">心宝丸</a>
@@ -57,12 +61,12 @@
 								<a href="product_03.html">蒲地蓝消炎片</a>
 							</li>
 							<li>
-								<a href="product_04.html" >蒲地蓝消炎胶囊</a>
+								<a href="product_04.html">蒲地蓝消炎胶囊</a>
 							</li>
 						</ul>
 					</li>
 					<li class="staOne" id="t3">
-						<div class="float width"><a href="javascript:;">心肾同治</a></div>
+						<a href="#">心肾同治</a>
 						<ul class="i_uls">
 							<li>
 								<a href="heart.html">心肾相交理论</a>
@@ -71,12 +75,12 @@
 								<a href="heart01.html">心宝丸的临床应用</a>
 							</li>
 							<li>
-								<a href="heart02.html" >龟鹿补肾片健康手册</a>
+								<a href="heart02.html">龟鹿补肾片健康手册</a>
 							</li>
 						</ul>
 					</li>
 					<li class="staOne" id="t4">
-						<div class="float width"><a href="javascript:;">最新动态</a></div>
+						<a href="javascript:;">最新动态</a>
 						<ul class="i_uls">
 							<li>
 								<a href="company_new.html">公司动态</a>
@@ -85,7 +89,7 @@
 								<a href="industry_new.html">行业动态</a>
 							</li>
 							<li>
-								<a href="video.html" >视频中心</a>
+								<a href="video.html">视频中心</a>
 							</li>
 						</ul>
 					</li>
@@ -105,33 +109,51 @@
 			<div class="banner float width">
 				<div class="banner_navs">
 					<ul>
-						<li><a href="product_01.html">心宝丸</a></li>
-						<li><a href="product_02.html">龟鹿补肾片</a></li>
-						<li><a href="product_03.html">蒲地蓝消炎胶囊</a></li>
-						<li><a href="product_04.html">蒲地蓝消炎片</a></li>
+						<li>
+							<a href="product_01.html">心宝丸</a>
+						</li>
+						<li>
+							<a href="product_02.html">龟鹿补肾片</a>
+						</li>
+						<li>
+							<a href="product_03.html">蒲地蓝消炎片</a>
+						</li>
+						<li>
+							<a href="product_04.html">蒲地蓝消炎胶囊</a>
+						</li>
 					</ul>
 				</div>
-				<div class="banners">
-					<img src="img/6a929a46d6.jpg" class="img"/>
-				</div>
 			</div>
-			<section class="left width">
-				<div class="stc_title"><img src="img/title_product_01.png" alt=""  class="img"/></div>
+			<div class="banners float width">
+				<img src="img/product.jpg" class="img"/>
+			</div>
+			<section class="float width">
+				<div class="stc_title"><img src="img/title_product_01.png" alt="" class="img" /></div>
 				<div class="_con">
-					
+					<div class="product">
+						<span><a href="porder_detail.html"><img src="" class="img"/></a></span>
+						<p>
+							<a href="porder_detail.html">心宝丸20丸</a>
+						</p>
+					</div>
+					<div class="product">
+						<span><a href="porder_detail.html"><img src="" class="img"/></a></span>
+						<p>
+							<a href="porder_detail.html">心宝丸40丸</a>
+						</p>
+					</div>
 				</div>
-			</section>
-			<div class="blogroll">
-				<div class="blogroll_left">友情链接</div>
-				<div class="blogroll_right">
-					<a href="http://www.360kad.com/product/575808.shtml">龟鹿补肾片-康爱多网上药店</a>
-					<a href="http://www.gdda.gov.cn/publicfiles/business/htmlfiles/jsjzz/index.htm">广东省食品药品监督管理总局</a>
-					<a href="http://www.sda.gov.cn/WS01/CL0001/">国家食品药品监督管理总局</a>
-				</div>
+			</section <div class="blogroll">
+			<div class="blogroll_left">友情链接</div>
+			<div class="blogroll_right">
+				<a href="http://www.360kad.com/product/575808.shtml">龟鹿补肾片-康爱多网上药店</a>
+				<a href="http://www.gdda.gov.cn/publicfiles/business/htmlfiles/jsjzz/index.htm">广东省食品药品监督管理总局</a>
+				<a href="http://www.sda.gov.cn/WS01/CL0001/">国家食品药品监督管理总局</a>
 			</div>
-			<div class="width float">
-				<iframe src="footer.html" width="100%" height="100px" frameborder="0" scrolling="no"></iframe>
-			</div>
+		</div>
+		<div class="width float">
+			<iframe src="footer.html" width="100%" height="100px" frameborder="0" scrolling="no"></iframe>
+		</div>
 
 		</div>
 	</body>
