--- a/speech.html
+++ b/speech.html
@@ -113,7 +113,7 @@
 				</div>
 				<div class="banners"></div>
 			</div>
-			<section class="left width b1">
+			<section class="float width b1">
 				<div class="stc_title"><img src="img/title_about_05.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<img src="img/spend.png" alt="董事长致辞" class="img tcs"/>
