--- a/Development.html
+++ b/Development.html
@@ -113,7 +113,7 @@
 				</div>
 				<div class="banners"></div>
 			</div>
-			<section class="left width b1">
+			<section class="float width b1">
 				<div class="stc_title"><img src="img/title_about_02.png" alt=""  class="img"/></div>
 				<div class="_con"><img src="img/8c5cedee96.png" alt=""  class="img"/></div>
 			</section>
