--- a/company_new.html
+++ b/company_new.html
@@ -121,7 +121,7 @@
 					<img src="img/b8625fe007.jpg" class="img" />
 				</div>
 			</div>
-			<section class="left width sectionh">
+			<section class="float width sectionh">
 				<div class="stc_title"><img src="img/title.png" alt="" class="img" /></div>
 				<div class="_con">
 					<div class="new_boxs float">
