--- a/demo1.html
+++ b/demo1.html
@@ -114,7 +114,7 @@
 					<img src="img/b8625fe007.jpg" class="img"/>
 				</div>
 			</div>
-			<section class="left width">
+			<section class="float width">
 				<div class="stc_title"><img src="img/title.png" alt=""  class="img"/></div>
 				
 			</section>
