--- a/heart.html
+++ b/heart.html
@@ -114,7 +114,7 @@
 					<img src="img/8513610779.jpg" class="img"/>
 				</div>
 			</div>
-			<section class="left width">
+			<section class="float width">
 				<div class="stc_title"><img src="img/title_heart.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<span class="company_top float width"><img src="img/1d6139b07a.jpg" class="img"/></span>
