--- a/heart02.html
+++ b/heart02.html
@@ -113,7 +113,7 @@
 					<img src="img/8513610779.jpg" class="img"/>
 				</div>
 			</div>
-			<section class="left width sectionh">
+			<section class="float width sectionh">
 				<div class="stc_title"><img src="img/title_heart_02.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<div class="new_boxs float">
