--- a/video.html
+++ b/video.html
@@ -114,14 +114,12 @@
 					<img src="img/b8625fe007.jpg" class="img"/>
 				</div>
 			</div>
-			<section class="left width">
+			<section class="float width">
 				<div class="stc_title"><img src="img/title_video.png" alt=""  class="img"/></div>
 				<div class="_con">
 					<div class="videos">
 						<video width="100%" height="85%" controls="controls" poster="img/videofm.png">
 							<source src="myvideo.mp4" type="video/mp4"></source>
-							<source src="myvideo.ogv" type="video/ogg"></source>
-							<source src="myvideo.webm" type="video/webm"></source>
 							<object width="" height="" type="application/x-shockwave-flash" data="myvideo.swf">
 								<param name="movie" value="myvideo.swf" />
 								<param name="flashvars" value="autostart=true&amp;file=myvideo.swf" />
@@ -133,8 +131,6 @@
 					<div class="videos">
 						<video width="100%" height="85%" controls="controls" poster="img/videofm.png">
 							<source src="myvideo.mp4" type="video/mp4"></source>
-							<source src="myvideo.ogv" type="video/ogg"></source>
-							<source src="myvideo.webm" type="video/webm"></source>
 							<object width="" height="" type="application/x-shockwave-flash" data="myvideo.swf">
 								<param name="movie" value="myvideo.swf" />
 								<param name="flashvars" value="autostart=true&amp;file=myvideo.swf" />
