--- a/contact.html
+++ b/contact.html
@@ -130,6 +130,13 @@
 							<textarea name="" rows="5" cols="" id="msg"></textarea>
 						</span>
 						<span>
+							<p class="yl">验证码：</p>
+							<input type="text" name="usename" id="ys" value="" />
+							<!--<p id="yt"></p>-->
+							<img src="img/yzm.png" alt=""  id="yt"/>
+							<!--<a href="#" class="bsn">看不清？换一个</a>-->
+						</span>
+						<span>
 							<input type="button" name="" id="btn" value="提交" />
 						</span>
 						<div class="form_logos"></div>
