--- a/heart01.html
+++ b/heart01.html
@@ -116,8 +116,8 @@
 			<section class="float width sectionh">
 				<div class="stc_title"><img src="img/title_heart_01.png" alt=""  class="img"/></div>
 				<div class="_con">
+					<div class="logol"><img src="img/logos.png" class="img"/></div>
 					<div class="new_boxs float">
-						<div class="logol"><img src="img/logos.png" class="img"/></div>
 						<div class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
@@ -182,6 +182,7 @@
 	</body>
 	<script src="js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/unslider.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		$(function() {
 			$('.staOne').children('ul').slideUp();
@@ -196,6 +197,7 @@
 				$('.staOne').children('ul').slideUp();
 				$(this).children('ul').slideToggle();
 			})
+			startsd();
 		})
 	</script>
 
