--- a/hwz.html
+++ b/hwz.html
@@ -7,6 +7,7 @@
 		<title>心宝药业</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		<link rel="stylesheet" type="text/css" href="css/dome1.css"/>
+		<link rel="stylesheet" type="text/css" href="css/css.css"/>
 		<script type="text/javascript">
 			(function() {
 				var html = document.documentElement;
@@ -113,12 +114,12 @@
 					<img src="img/8513610779.jpg" class="img"/>
 				</div>
 			</div>
-			<section class="float width sectionh">
+			<section class="left width">
 				<div class="stc_title"><img src="img/title_heart_02.png" alt=""  class="img"/></div>
-				<div class="_con">
+				<div class="_con sectionh">
 					<div class="logol"><img src="img/logos.png" class="img"/></div>
-					<div class="new_boxs float">
-						<div class="new_s">
+					<ul class="new_boxs float">
+						<li class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
 								<ul>
@@ -126,8 +127,8 @@
 									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
 								</ul>
 							</span>
-						</div>
-						<div class="new_s">
+						</li>
+						<li class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
 								<ul>
@@ -135,8 +136,8 @@
 									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
 								</ul>
 							</span>
-						</div>
-						<div class="new_s">
+						</li>
+						<li class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
 								<ul>
@@ -144,8 +145,8 @@
 									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
 								</ul>
 							</span>
-						</div>
-						<div class="new_s">
+						</li>
+						<li class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
 								<ul>
@@ -153,8 +154,8 @@
 									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
 								</ul>
 							</span>
-						</div>
-						<div class="new_s">
+						</li>
+						<li class="new_s">
 							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
 							<span class="new_right">
 								<ul>
@@ -162,8 +163,17 @@
 									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
 								</ul>
 							</span>
-						</div>
-					</div>
+						</li>
+						<li class="new_s">
+							<span class="new_left"><img src="img/50f750d822.jpg" class="img"/></span>
+							<span class="new_right">
+								<ul>
+									<li><a href="#">喜讯！喜讯！</a></li>
+									<li><a href="#" class="title">心宝药业获2017年度广东省工程技术研究中心认定</a></li>
+								</ul>
+							</span>
+						</li>	
+					</ul>
 				</div>
 			</section>
 			<div class="blogroll">
