--- a/details.html
+++ b/details.html
@@ -103,27 +103,28 @@
 				<h1 class="header_con">公司动态</h1>
 				<div class="header_nav"></div>
 			</header>
-			<div class="detail_box float width">
-				<div class="logob"></div>
-				<h1 class="detail_top">喜讯！心宝药业获2017年度广东省工程技术研究中心认定！</h1>
-				<div class="detail_bn">
-					<p class="ts">近日，经广东省科技厅认定，“广东省心宝名优中成药工程技术研究中心”正式在广东心宝药业科技有限公司挂牌。该工程技术研究中心的认定，是对心宝药业自主研发能力、创新能力、技术人才队伍、行业地位等方面的充分肯定。这标志着心宝药业科研创新能力达到了一个新的高度。</p>
-					<div class="float width til">
-						<h3 class="detail_title">工程中心,体系认定</h3>
-					</div>
-					<p>为深入贯彻落实广东省科技创新大会精神，推进规模以上企业建立研发机构，增强高校和科研院所的技术创新能力，加快科技成果转化，为建设国家科技产业创新中心提供支撑，广东省科技厅开展广东省工程技术研究中心（以下简称“工程中心”）的认定工作。</p>
-					<p>工程中心主要围绕我省实施创新驱动发展战略的要求，依托省内行业、领域具有科技实力的规模以上创新型企业、特别是主营业务收入5亿元以上工业企业、高校和科研院所组建。</p>
-					<p>从以上可以看得出，省科技厅对于企业申报工程技术研究中心要求是相当严格的，省级工程技术研究中心的认定，标志着公司在科技创新能力、销售规模等方面具有较大的优势，同时彰显了公司的科技投入的注重和技术创新方面的卓越成就。</p>
-					<div class="width float">
-						<img src="img/50f750d822.jpg" class="img"/>
-					</div>
-					<div class="float width til">
-						<h3 class="detail_title">科研创新，中心先行</h3>
-						<p>心宝药业凭借产品确切的疗效、良好的市场反应和持续创新的企业精神，加大科技投入和技术创新，顺利通过“广东省心宝名优中成药工程技术研究中心”的认定。</p>
-						<p>心宝药业拥有良好的技术创新环境，并成立了研发中心。中心配备了专业的研发生产及检测分析设备，拥有一支高专业素质的人才创新队伍，建立了完善的研究开发组织管理制度及激励体系，对研发的整个过程进行有序又有效的管理。2016年，企业研发经费投入高达1215万，占销售收入的比例为6%，完成科技成果转化17项，拥有已授权的各项知识产权共26 项，并通过了国家知识产权规范化管理标准的认证。</p>
-					</div>
+			<section class="float width">
+				<div class="detail_box float width">
+					<h1 class="detail_top">喜讯！心宝药业获2017年度广东省工程技术研究中心认定！</h1>
+					<span class="detail_bn">
+						<p class="ts">近日，经广东省科技厅认定，“广东省心宝名优中成药工程技术研究中心”正式在广东心宝药业科技有限公司挂牌。该工程技术研究中心的认定，是对心宝药业自主研发能力、创新能力、技术人才队伍、行业地位等方面的充分肯定。这标志着心宝药业科研创新能力达到了一个新的高度。</p>
+						<span class="float width til">
+							<h3 class="detail_title">工程中心,体系认定</h3>
+						</span>
+						<p>为深入贯彻落实广东省科技创新大会精神，推进规模以上企业建立研发机构，增强高校和科研院所的技术创新能力，加快科技成果转化，为建设国家科技产业创新中心提供支撑，广东省科技厅开展广东省工程技术研究中心（以下简称“工程中心”）的认定工作。</p>
+						<p>工程中心主要围绕我省实施创新驱动发展战略的要求，依托省内行业、领域具有科技实力的规模以上创新型企业、特别是主营业务收入5亿元以上工业企业、高校和科研院所组建。</p>
+						<p>从以上可以看得出，省科技厅对于企业申报工程技术研究中心要求是相当严格的，省级工程技术研究中心的认定，标志着公司在科技创新能力、销售规模等方面具有较大的优势，同时彰显了公司的科技投入的注重和技术创新方面的卓越成就。</p>
+						<div class="width float">
+							<img src="img/50f750d822.jpg" class="img"/>
+						</div>
+						<span class="float width til">
+							<h3 class="detail_title">科研创新，中心先行</h3>
+							<p>心宝药业凭借产品确切的疗效、良好的市场反应和持续创新的企业精神，加大科技投入和技术创新，顺利通过“广东省心宝名优中成药工程技术研究中心”的认定。</p>
+							<p>心宝药业拥有良好的技术创新环境，并成立了研发中心。中心配备了专业的研发生产及检测分析设备，拥有一支高专业素质的人才创新队伍，建立了完善的研究开发组织管理制度及激励体系，对研发的整个过程进行有序又有效的管理。2016年，企业研发经费投入高达1215万，占销售收入的比例为6%，完成科技成果转化17项，拥有已授权的各项知识产权共26 项，并通过了国家知识产权规范化管理标准的认证。</p>
+						</span>
+					</span>
 				</div>
-			</div>
+			</section>
 			<div class="blogroll">
 				<div class="blogroll_left">友情链接</div>
 				<div class="blogroll_right">
