--- a/heart01.html
+++ b/heart01.html
@@ -166,6 +166,9 @@
 					</div>
 				</div>
 			</section>
+			<div class="hx">
+				<div></div>
+			</div>
 			<div class="blogroll">
 				<div class="blogroll_left">友情链接</div>
 				<div class="blogroll_right">
@@ -197,7 +200,7 @@
 				$('.staOne').children('ul').slideUp();
 				$(this).children('ul').slideToggle();
 			})
-			startsd();
+//			startsd();
 		})
 	</script>
 
