--- a/heart02.html
+++ b/heart02.html
@@ -166,6 +166,7 @@
 					</div>
 				</div>
 			</section>
+			<div class="hx"><div></div></div>
 			<div class="blogroll">
 				<div class="blogroll_left">友情链接</div>
 				<div class="blogroll_right">
