--- a/company_new.html
+++ b/company_new.html
@@ -174,6 +174,9 @@
 					</div>
 				</div>
 			</section>
+			<div class="hx">
+				<div></div>
+			</div>
 			<div class="blogroll">
 				<div class="blogroll_left">友情链接</div>
 				<div class="blogroll_right">
